@@ -1,3 +1,5 @@
+- add minimal/experimental lightdm autologin support to drakboot
+
 Version 16.18 - 28 December 2013
 
 - detecting input devices:
